Fix tertiary text alignment and add width limit

--- a/src/css/components/_v-scroll-menu-item.scss
+++ b/src/css/components/_v-scroll-menu-item.scss
@@ -65,6 +65,7 @@
         flex: 0.5;
         margin: auto;
         align-self: flex-end;
+        max-width: 55px;
 
         svg {
             display: block;
